--- a/Shop_Server/src/Makefile
+++ b/Shop_Server/src/Makefile
@@ -3,8 +3,8 @@ OBJS:=$(patsubst %.cpp,%.o,$(SOURCE))
 
 TARGET:=ShopServer
 CC:=g++
-LIBS:=-lpthread
-INCLUDE:=-I../include
+LIBS:=-lpthread -L/usr/lib/i386-linux-gnu -lmysqlclient
+INCLUDE:=-I../include -I/usr/include/mysql/
 CFLAGS:= -std=c++11 -g -O3 $(INCLUDE)
 CPPFLAGS:=$(CFLAGS)
 RM:=rm -rf 
